--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,28 @@
 asgiref==3.3.1
 autopep8==1.5.4
+backcall==0.2.0
+decorator==4.4.2
 dj-database-url==0.5.0
 Django==3.1.3
+django-cors-headers==3.5.0
 django-heroku==0.3.1
+djangorestframework==3.12.2
 gunicorn==20.0.4
+ipython==7.19.0
+ipython-genutils==0.2.0
+jedi==0.17.2
+parso==0.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.8
 psycopg2==2.8.6
+ptyprocess==0.6.0
 pycodestyle==2.6.0
+Pygments==2.7.2
 python-decouple==3.3
 pytz==2020.4
 sqlparse==0.4.1
 toml==0.10.2
+traitlets==5.0.5
+wcwidth==0.2.5
 whitenoise==5.2.0
