--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,14 @@ django-cors-headers==3.5.0
 django-heroku==0.3.1
 djangorestframework==3.12.2
 gunicorn==20.0.4
+ipython==7.19.0
 ipython-genutils==0.2.0
 jedi==0.17.2
+Markdown==3.3.3
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==8.1.0
 prompt-toolkit==3.0.8
 psycopg2==2.8.6
 ptyprocess==0.6.0
@@ -22,6 +25,6 @@ python-decouple==3.3
 pytz==2020.4
 sqlparse==0.4.1
 toml==0.10.2
-traitlets==4.3.3
+traitlets==5.0.5
 wcwidth==0.2.5
 whitenoise==5.2.0
