--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,29 @@
-asgiref==3.3.1
+asgiref==3.2.10
 autopep8==1.5.4
 backcall==0.2.0
-certifi==2020.12.5
-chardet==4.0.0
-cloudinary==1.24.0
 decorator==4.4.2
 dj-database-url==0.5.0
-Django==3.1.3
-django-cloudinary-storage==0.3.0
-django-cors-headers==3.5.0
+Django==3.1.1
+django-environ==0.4.5
 django-heroku==0.3.1
-djangorestframework==3.12.2
+djangorestframework==3.11.1
 gunicorn==20.0.4
-idna==2.10
 ipython
 ipython-genutils==0.2.0
 jedi==0.17.2
-Markdown==3.3.3
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==8.1.0
+Pillow==7.2.0
 prompt-toolkit==3.0.8
-psycopg2==2.8.6
+psycopg2==2.8.5
 ptyprocess==0.6.0
 pycodestyle==2.6.0
 Pygments==2.7.2
 python-decouple==3.3
-pytz==2020.4
-requests==2.25.1
-six==1.15.0
-sqlparse==0.4.1
+pytz==2020.1
+sqlparse==0.3.1
 toml==0.10.2
 traitlets
-urllib3==1.26.2
 wcwidth==0.2.5
 whitenoise==5.2.0
