include django-cors-headers

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ gunicorn
 ipython
 pillow
 python-decouple
-corsheaders
 cloudinary
 django-cloudinary-storage
-django-cors-heade
+django-cors-headers
